@@ -26,6 +26,16 @@ typedef unsigned short* WXBSTR;
 #undef GetObject
 #endif
 
+// Flags used with wxAutomationObject::GetInstance()
+enum wxAutomationInstanceFlags
+{
+    // Only use the existing instance, never create a new one.
+    wxAutomationInstance_UseExistingOnly = 0,
+
+    // Create a new instance if there are no existing ones.
+    wxAutomationInstance_CreateIfNeeded = 1
+};
+
 /*
  * wxAutomationObject
  * Wraps up an IDispatch pointer and invocation; does variant conversion.
@@ -44,9 +54,10 @@ public:
 
     // Get a dispatch pointer from the current object associated
     // with a ProgID, such as "Excel.Application"
-    bool GetInstance(const wxString& progId) const;
+    bool GetInstance(const wxString& progId,
+                     int flags = wxAutomationInstance_CreateIfNeeded) const;
 
-    // Get a dispatch pointer from a new instance of the the class
+    // Get a dispatch pointer from a new instance of the class
     bool CreateInstance(const wxString& progId) const;
 
     // Low-level invocation function. Pass either an array of variants,
