@@ -175,6 +175,11 @@ Changes in behaviour not resulting in compilation errors, please read this!
   from the previous versions. Using wxNotebookEvent::GetSelection() instead of
   querying the notebook selection avoids the problem and is recommended.
 
+- wxMSW-specific wxAutomationObject::GetInstance() method now creates a new
+  instance if needed instead of failing if the application providing the
+  requested ProgID is not running. Pass wxAutomationInstance_UseExistingOnly
+  flag to it to revert to the old behaviour.
+
 
 Changes in behaviour which may result in compilation errors
 -----------------------------------------------------------
@@ -452,6 +457,7 @@ MSW:
 - Allow using wxDC::DrawText() with multiline texts.
 - Fix wxBitmapButton best size determination broken in 2.9.1.
 - Center task dialog-based wxProgressDialog on the parent (John Roberts).
+- wxAutomationObject::GetInstance() creates objects on demand (Kolya Kosenko).
 
 
 
